# ciphernode

./: .dockerignore  .env.example  .gitignore  BUILD_APK.md  DOCKER.md  DOCKER_HUB.md  Dockerfile  Dockerfile.web  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  app.json  design_guidelines.md  docker-compose.yml  docker-entrypoint.sh  eas.json  eslint.config.js  metro.config.js  package-lock.json  package.json  replit.md  run-local-dev.bat  run-local-dev.ps1  termux-start.sh  web-crypto-shim-noop.js
.claude/: settings.local.json
.github/workflows/: android.yml  deploy-website.yml  docker.yml  electron-linux.yml  (+5 more)
casaos/: CASAOS.md  casaos-app.yaml
client/: App.tsx  index.js
docs/: e2ee-flow.md  electron-to-tauri.md
electron/: electron-builder.json  entitlements.mac.plist  main.ts  onion-share.ts  preload.ts  tor-manager.ts  tsconfig.json
locales/: tr.json
nginx/: ciphernode.conf  docker-web.conf
plugins/: withDisableLint.cjs  withDisableLint.js
scripts/: patch-tauri-web-export.js  serve-dist-lan.js  setup-cloudflare.sh  setup-duckdns.sh  setup-ngrok.sh  setup-ssl-windows.ps1  setup-ssl.sh  setup-tor-hidden-service.sh  windows-start.ps1
server/: index.ts  routes.ts  tor-hidden-service.ts
server-go/: anti_graviti_scanner.go  go.mod  security_manager.go  server.go  server_test.go
server_dist/: .env.example  README.txt  index.mjs  server-bundle.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tor-bin/: KURULUM.md
unraid/: ciphernode.xml
web/: index.html
website/: index.html
(+68 files in other folders)
