[package]
name = "ciphernode"
version = "2.0.0"
description = "CipherNode Security Relay"
authors = ["CipherNode"]
edition = "2021"

[lib]
name = "ciphernode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
